# FanController

./: .gitignore  README.md  tags
Firmware/: CMakeLists.txt  FT232RL_cfg.xml  controller.cmake  power.cmake
Firmware/include/common/: common.h  stc8g.h  stc8h.h  types.h
Firmware/include/controller/: clock.h  config.h  i2c.h  power.h  pwm.h  serial.h  status_led.h
Firmware/include/power/: boot_mode.h  clock.h  command.h  led.h  power.h
Firmware/source/controller/: clock.c  i2c.c  main.c  power.c  pwm.c  serial.c  spi.c  status_led.c
Firmware/source/power/: boot_mode.c  clock.c  command.c  led.c  main.c  power.c
PCB/: FanController.eprj
shell/: FanController.FCStd  FanController.FCStd1  Sensor.FCStd  Sensor.FCStd1
